Endpoint que retorna informações sobre o usuário autorizado/logado
