# src/documentation/swagger-output.json
@@ -39,6 +39,10 @@
     {
       "name": "Analyzes",
       "description": "Endpoints for handling analyzes and their data"
+    },
+    {
+      "name": "Authorized User",
+      "description": "Endpoints for handling authorized users and their data"
     }
   ],
   "paths": {
@@ -211,7 +215,7 @@
           "Analyzes"
         ],
         "summary": "Private route for analysts",
-        "description": "Updates information about one analysis determined by ID.    Requires the analyst logged in to be the one in charge of the analysis.   If any of the scores of the analysis is updated, the score of the company analyzed will also be updated.",
+        "description": "Updates information about one analysis determined by ID. \r   Requires the analyst logged in to be the one in charge of the analysis.\r   If any of the scores of the analysis is updated, the score of the company analyzed will also be updated.",
         "parameters": [
           {
             "name": "id",
@@ -3133,6 +3137,102 @@
             }
           }
         }
+      }
+    },
+    "/api/v1/authorized-user/": {
+      "get": {
+        "tags": [
+          "Authorized User"
+        ],
+        "description": "Shows information about the authorized user.",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "example": {
+                  "responsePossibilities": [
+                    {
+                      "admin": {
+                        "_id": "64e6b6edsafsdfa8d7ea2d26",
+                        "user": {
+                          "_id": "64e6bdds6ed598d7ea12269b",
+                          "email": "admin@gmail.com"
+                        }
+                      }
+                    },
+                    {
+                      "analyst": {
+                        "_id": "64e6b1ds1bd31dad7ea2dd1a",
+                        "user": {
+                          "_id": "64e6dsafa121s8d7ea269b77",
+                          "email": "analista@gmail.com"
+                        },
+                        "name": "analista",
+                        "cpf": "000.100.000-00"
+                      }
+                    },
+                    {
+                      "customer": {
+                        "_id": "64e6b6e1ddsaddfa12fa8d1b",
+                        "user": {
+                          "_id": "64e6b6ds1dfa1dfb12fa8d78",
+                          "email": "customer1@gmail.com"
+                        },
+                        "name": "customer1",
+                        "cpf": "000.000.000-00"
+                      }
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "401": {
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "Unauthorized access"
+                }
+              }
+            },
+            "description": "Unauthorized"
+          },
+          "403": {
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "You do not have sufficient privileges to access this route"
+                }
+              }
+            },
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "An error occurred while fetching the user data"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     }
   },
